# lmcli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json  config.json  providers.json  trace.txt
.github/workflows/: test.yml
cli/: main.cpp
cli/commands/: chats.cpp  init.cpp  select_account.cpp  setup.cpp  start.cpp
cli/tools/: ask_confirmation.cpp  ask_confirmation.h
core/loaders/: accounts.cpp  accounts.h  json_io.cpp  theme.cpp  theme.h  tools.cpp
core/providers/: anthropic.cpp  anthropic.h  google.cpp  google.h  open_ai_compatible.cpp  open_ai_compatible.h  provider.cpp  provider.h  streaming.cpp  streaming.h
core/tools/: command_policy.cpp  command_policy.h  exec_bash.cpp  exec_bash.h  handle_tool_calls.cpp  handle_tool_calls.h
core/types/: message.h  providers.h  roles.cpp  roles.h  theme.cpp  theme.h  tools.cpp  tools.h
core/utils/: utils.cpp
data/: providers.json  tools.json
examples/: accounts.example.json  config.example.json
include/: accounts.h  ansi_codes.h  anthropic.h  chatSetup.h  chats.h  colors.h  commands.h  config.h  constants.h  google.h  groq.h  httpUtils.h  http_utils.h  httpsUtils.h  json_io.h  load_json.h  message.h  openAICompatible.h  open_ai_compatible.h  provider.h  providers.h  selectAccount.h  select_account.h  selectaccount.h  selectprovider.h  setupAccount.h  startChat.h  streaming.h  terminal.h  tools.h  utils.h
logging/: logger.h
src/: accounts.cpp  anthropic.cpp  chatSetup.cpp  chats.cpp  config.cpp  groq.cpp  httpUtils.cpp  main.cpp  message.cpp  openAICompatible.cpp  openai-compatible.cpp  provider.cpp  provider.h  providers.cpp  selectAccount.cpp  select_account.cpp  selectaccount.cpp  selectprovider.cpp  setupAccount.cpp  startChat.cpp  streaming.cpp  tempCodeRunnerFile.cpp  terminal.cpp  tools.cpp  utils.cpp
src/commands/: accounts.cpp  chats.cpp  chats.h  config.cpp  config_l.h  help.cpp  init.cpp  remove.cpp  removeAccount.cpp  removeChat.cpp  removeChats.cpp  remove_account.cpp  remove_chat.cpp  remove_chats.cpp  select_account.cpp  select_account.h  setup.cpp  setupAccount.cpp  start.cpp  startChat.cpp
src/loaders/: accounts.cpp  chats.cpp  config.cpp  config.h  json_io.cpp  json_io.h  load_json.cpp  providers.cpp  tools.cpp  tools.h
src/logging/: logger.cpp  logger.h
src/providers/: anthropic.cpp  anthropic.h  google.cpp  google.h  openAICompatible.cpp  open_ai_compatible.cpp  open_ai_compatible.h  provider.cpp  provider.h  providers.cpp  providers.h  streaming.cpp  streaming.h
src/types/: handle_tool_calls.cpp  handle_tool_calls.h  message.cpp  message.h  providers.cpp  roles.h  tools.cpp  tools.h
src/utils/: httpUtils.cpp  http_utils.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp
tui/: chat_flow.cpp  chat_flow.h  chats.cpp  config.cpp  remove.cpp  render.cpp  render.h  select_account.cpp  setup.cpp  start.cpp
